@@ -7,6 +7,10 @@ New features
 - Checking C compiling against the R shared library can be skipped with
   the environment variable `RPY2_API_FORCE` set to `True`.
 
+- The rinterface-level class :class:`rpy2.rinterface.SexpExtPtr` now
+  also has an robject-level wrapper :class:`rpy2.robjects.ExternalPointer`,
+  and a representation for class name-based conversion rules.
+
 
 Bugs fixed
 ----------
